--- a/datasource/projects/3.md
+++ b/datasource/projects/3.md
@@ -3,6 +3,6 @@ title: "Live Server"
 date: "2019-01-07"
 ---
 
-Quickly reloads your webpage whenever you make any change to any file. Great for development. Inspired by live-server for NodeJS. Built with Python. Uses [Tornado](https://www.tornadoweb.org/en/stable/), [Watchdog](https://pythonhosted.org/watchdog/) and Beautiful Soup.
+Quickly reloads your webpage whenever you make a change to any file. Great for development. Inspired by live-server for NodeJS. Built with Python. Uses [Tornado](https://www.tornadoweb.org/en/stable/), [Watchdog](https://pythonhosted.org/watchdog/) and Beautiful Soup.
 
 [GitHub](https://github.com/ajitid/live-server) [PyPI](https://pypi.org/project/live-server/)
