--- a/datasource/projects/1.md
+++ b/datasource/projects/1.md
@@ -5,4 +5,4 @@ date: "2019-01-03"
 
 Make memes offline. Works without any backend technology or any frontend framework. Uses service workers for its offline use. Features two themes and saving meme to disk. Built with JavaScript and HTML5 Canvas.
 
-[GitHub](https://github.com/ajitid/meme-creator) [Live](https://meme-creator-live.netlify.com/)
+[GitHub](https://github.com/goandbuild/meme-creator) [Live](https://meme-creator-live.netlify.com/)
